# lens-locker

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSES.txt  MODELS.md  README.md  deny.toml  package-lock.json  package.json
.github/workflows/: ci.yml
crates/catalog/: Cargo.toml  schema.sql
crates/catalog/migrations/: 0002_standard_fts.sql  0003_ml_extensions.sql  0004_tag_confidence_thresholds.sql  0005_similarity_search_floor.sql  0006_model_upgrade_notices.sql  0007_migration_journal.sql
crates/catalog/src/: lib.rs  migration.rs  vec_mirror.rs
crates/convert/: Cargo.toml
crates/convert/src/: jpeg.rs  lib.rs  raster.rs  tiff.rs
crates/convert/tests/: exit_criteria.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/decode/: Cargo.toml
crates/decode/src/: lib.rs
crates/hash/: Cargo.toml
crates/hash/src/: lib.rs
crates/import/: Cargo.toml
crates/import/src/: lib.rs  rebuild.rs
crates/import/tests/: crash_recovery.rs  exit_criteria.rs  rebuild_from_sidecars.rs
crates/ml/: Cargo.toml
crates/ml/src/: backlog.rs  faces.rs  labels.rs  lib.rs  placeholder.rs  similarity.rs  tagging.rs
crates/ml/tests/: backlog_end_to_end.rs  face_backlog_end_to_end.rs  sface_real_model.rs  siglip_scoring_formula.rs  siglip_vision.rs  yunet_real_model.rs
crates/raw-worker/: Cargo.toml
crates/raw-worker/src/: main.rs
crates/vault/: Cargo.toml
crates/vault-helper/: Cargo.toml
crates/vault-helper/src/: bitlocker.rs  main.rs  vhd.rs
crates/vault/src/: keypair.rs  lib.rs  marker.rs  protocol.rs  secret.rs
crates/xmp/: Cargo.toml
crates/xmp/src/: lib.rs
docs/: verify-wfp-audit.ps1  wfp-audit-runbook.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/models/: README.md
src-tauri/src/: lib.rs  main.rs  vault_elevation.rs  webview2_hardening.rs
src-tauri/windows/: hooks.nsh
ui/: index.html  main.js  styles.css
ui/fonts/: README.md
workplan/: LOCK-MAP.md  LOCK-SPEC.md  MAP.md  ML-MAP.md  ML-SPEC.md  SPEC.md  TRACKER.md
workplan/design/: lenslocker-design.html  lumenvault-design.html
workplan/prototypes/: 017-catalog-schema.md  035-ml-schema.md
workplan/research/: codec-licensing.md  face-recognition-models.md  gpl-linkage.md  gui-shells.md  network-enforcement.md  offline-autotagging.md  recompression.md  sqlite-vec-100k-benchmark.md  thumbnail-grid-benchmark.md
workplan/tickets/: 001-adopt-core-stack.md  002-managed-library-move-model.md  003-scope-classification.md  004-windows-first-portable-core.md  005-verify-plus-retention.md  006-research-gui-shells.md  007-choose-gui-shell.md  008-research-recompression.md  009-conversion-policy.md  010-import-pipeline-store-layout.md  011-dedupe-ux.md  012-metadata-portability.md  013-research-codec-licensing.md  014-v1-format-matrix.md  015-research-network-enforcement.md  016-research-offline-autotagging.md  017-draft-catalog-schema.md  018-assemble-spec.md  019-validate-thumbnail-grid-performance.md  020-research-gpl-linkage.md  021-decide-project-license.md  022-legal-review-hevc.md  023-research-face-model-licensing.md  024-decide-tagging-model-runtime.md  025-rebenchmark-sqlite-vec.md  026-legal-review-face-recognition.md  028-design-face-clustering-ux.md  029-design-tag-taxonomy.md  030-decide-background-execution-model.md  031-design-smart-albums-ux.md  032-design-model-provisioning.md  033-design-review-correction-ux.md  034-design-similarity-search-ux.md  035-draft-ml-schema.md  036-assemble-ml-spec.md  037-confirm-threat-model.md  038-clarify-ssh-key-meaning.md  039-decide-encryption-scope.md  040-choose-vault-mount-mechanism.md  041-research-crypto-stack.md  (+11 more)
