[package]
name = "lumenvault-app"
version.workspace = true
description = "LumenVault — offline image library manager"
authors = ["chris"]
edition.workspace = true
publish.workspace = true

[lib]
name = "lumenvault_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
