[package]
name = "lumenvault-app"
version.workspace = true
description = "LumenVault — offline image library manager"
authors = ["chris"]
edition.workspace = true
publish.workspace = true

[lib]
name = "lumenvault_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
thiserror = "2.0.18"

lumenvault-catalog = { version = "0.1.0", path = "../crates/catalog" }
lumenvault-import = { version = "0.1.0", path = "../crates/import" }
lumenvault-xmp = { version = "0.1.0", path = "../crates/xmp" }
