[package]
name = "lenslocker-app"
version.workspace = true
description = "LensLocker — offline image library manager"
authors = ["chris"]
edition.workspace = true
publish.workspace = true

[lib]
name = "lenslocker_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
thiserror = "2.0.18"
# For get_full_preview's data: URL encoding — 0.22 is already resolved
# transitively at this exact version (confirmed via Cargo.lock), so this
# adds no new version to the dependency graph, just direct access to it.
base64 = "0.22"

lenslocker-catalog = { version = "0.1.0", path = "../crates/catalog" }
lenslocker-import = { version = "0.1.0", path = "../crates/import" }
lenslocker-xmp = { version = "0.1.0", path = "../crates/xmp" }
lenslocker-vault = { version = "0.1.0", path = "../crates/vault" }
# Milestone ML-5's text-to-image search (crates/ml/src/similarity.rs) is
# the first command that runs live ML inference at query time rather than
# only reading/writing already-computed catalog rows — the first real
# reason this crate needs lenslocker-ml at all (CLAUDE.md previously
# tracked this dependency edge as "not yet crossed").
lenslocker-ml = { version = "0.1.0", path = "../crates/ml" }

# Windows-only: WebView2 COM hardening (workplan/SPEC.md §8.1, Milestone 6).
# Both crates are already transitive dependencies of `wry`/`tauri-runtime-wry`
# (confirmed via `cargo tree`) — declaring them directly just gives lib.rs
# access to the same COM interfaces Tauri itself uses internally, at the
# same resolved version, rather than adding a new dependency to the graph.
[dev-dependencies]
tempfile = "3.27.0"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
# Milestone 5.5 adds `Win32_Storage_FileSystem` for `GetDiskFreeSpaceExW`
# (free-space reporting in `inspect_library_folder`) — reusing this already-
# direct dependency rather than adding a new disk-space crate.
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Com", "Win32_Storage_FileSystem", "Win32_System_SystemInformation", "Win32_UI_Shell", "Win32_System_Registry", "Win32_System_Threading"] }
