[package]
name = "lumenvault-decode"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["bmp", "gif", "jpeg", "png", "webp"] }
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
