[package]
name = "lenslocker-import"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
lenslocker-catalog = { version = "0.1.0", path = "../catalog" }
lenslocker-convert = { version = "0.1.0", path = "../convert" }
lenslocker-decode = { version = "0.1.0", path = "../decode" }
lenslocker-hash = { version = "0.1.0", path = "../hash" }
lenslocker-xmp = { version = "0.1.0", path = "../xmp" }
rusqlite = { version = "0.40.1", features = ["bundled"] }
thiserror = "2.0.18"
walkdir = "2.5.0"

[dev-dependencies]
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp"] }
tempfile = "3.27.0"
