[package]
name = "lenslocker-ml"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# default-features = false, and no `download-binaries`/`fetch-models`:
# both would pull in the optional `ureq` dependency, which `deny.toml`
# bans outright. The bundled DirectML `onnxruntime.dll` is a Milestone
# ML-1 installer asset (ML-SPEC.md §10), never fetched at build or run
# time — `load-dynamic` loads it via `libloading` at process start
# instead (see src/lib.rs's `init`).
# Exact-pinned (unlike this workspace's other deps): `2.0` is still a
# release candidate, so a bare "2.0.0-rc.12" would let a semver-compatible
# but behaviorally-unvetted rc land silently on the next `cargo update`.
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "load-dynamic", "directml", "api-24"] }
thiserror = "2.0.18"
# No format-decode features — Milestone ML-2's preprocessing takes an
# already-decoded `DynamicImage` (produced by `lenslocker-decode`) and only
# needs `image`'s resize/pixel-buffer algorithms, which aren't gated by the
# per-codec features those other crates enable.
image = { version = "0.25.10", default-features = false }
# default-features = false: the crate's defaults pull in `onig` (a C
# regex library needing its own build toolchain setup) for BPE-style
# tokenizers' regex pretokenizers and `esaxx_fast` for its BPE *trainer*
# (irrelevant — this crate only ever loads a pre-built tokenizer.json to
# encode text, never trains one). SigLIP's tokenizer.json (MODELS.md §5)
# is a Unigram model with a Metaspace pretokenizer — no onig-dependent
# component — but its normalizer chain does have Regex-pattern "Replace"
# steps, which need *some* regex backend; `fancy-regex` (pure Rust, no C
# toolchain) covers that without onig's extra build dependency. Also no
# `hf-hub`/`http` (opt-in only, not default) — those would fetch
# tokenizers from the network, the one thing this crate must never do.
tokenizers = { version = "0.23.1", default-features = false, features = ["fancy-regex"] }
# Milestone ML-2's backlog orchestration (crates/ml/src/backlog.rs) ties
# model inference to catalog reads/writes and file decode — a deliberate,
# flagged crate-boundary judgment call (that module's own doc comment):
# no closed ticket settled where this orchestration should live, and
# putting it here (rather than a new crate, or lenslocker-import) keeps
# it next to the tagging-specific pipeline logic it drives.
lenslocker-catalog = { version = "0.1.0", path = "../catalog" }
lenslocker-decode = { version = "0.1.0", path = "../decode" }
rusqlite = { version = "0.40.1", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.27.0"
# Only this crate's own tests need to write a real decodable file to disk
# (the non-test `image` dependency above has no codec features enabled).
image = { version = "0.25.10", default-features = false, features = ["png"] }
