[package]
name = "lenslocker-vault-helper"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "lenslocker-vault-helper"
path = "src/main.rs"

[dependencies]
lenslocker-vault = { version = "0.1.0", path = "../vault" }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_Vhd",
    "Win32_Security",
    "Win32_System_IO",
] }
