[package]
name = "lenslocker-vault"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
zeroize = { version = "1", features = ["derive"] }
ssh-key = { version = "0.6", features = ["ed25519", "std", "rand_core"] }
rand_core = { version = "0.6", features = ["std"] }
