[package]
name = "lumenvault-xmp"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
lumenvault-catalog = { version = "0.1.0", path = "../catalog" }
quick-xml = "0.41.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
